Fix: - Outline and size of the form - Button style on mobile form

--- a/catalog.css
+++ b/catalog.css
@@ -153,6 +153,11 @@
     cursor: pointer;
 }
 
+.categories-filter span {
+    font-size: 14px;
+    font-weight: 400;
+}
+
 .categories-filter img {
     width: 16px;
     height: 16px;
@@ -177,7 +182,7 @@
     justify-content: flex-end;
 }
 
-    
+
 .categories-modal {
     position: sticky;
     bottom: 0;
